# crewai-mcprun

./: README.md  crypto_hash.wasm  hash_results.md  pyproject.toml  report.md
src/acme/: crew.py  main.py
src/acme/config/: agents.yaml  tasks.yaml
src/acme/tools/: mcpx_tools.py  servlet_tool.py
