[project]
name = "acme"
version = "0.1.0"
description = "acme using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
acme = "acme.main:run"
run_crew = "acme.main:run"
train = "acme.main:train"
replay = "acme.main:replay"
test = "acme.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
